@@ -1,3 +1,9 @@
+2002-12-28 Chema Celorio <chema@celorio.com>
+
+	* gtkdoc-scan[g]obj.in: add "void" to functions with no parameters,
+	avoids warning with -Wmissing-prototypes when compiling
+	{module}-scan.c
+
 2002-12-16  James Henstridge  <james@daa.com.au>
 
 	* gtk-doc.spec.in: require perl >= 5.6.0
